Prevent titles and numbers overspilling on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -471,7 +471,23 @@ select {
 
 /* MEDIA QUERIES */
 
+@media only screen and (max-width: 600px) {
+    h1 {
+        font-size: 3.5rem;
+    }
+
+    .feature-number {
+        font-size: 2em;
+    }
+
+    .progress-title {
+        font-size: 3rem;
+    }
+}
+
 @media only screen and (min-width: 601px) {
+
+
 
     .logo {
         max-height: 48px;
